--- a/08-deep-learning/Khomework-8.ipynb
+++ b/08-deep-learning/Khomework-8.ipynb
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "03a91483",
+   "id": "0b4b1020",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a61f249c",
+   "id": "61dc4f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "170d9020",
+   "id": "7d67b790",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e48cd444",
+   "id": "29b2c469",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "42faab5f",
+   "id": "7d892e53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "15441ce5",
+   "id": "c7b85568",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8f4cefd6",
+   "id": "ee7c9c60",
    "metadata": {},
    "outputs": [
     {
@@ -915,8 +915,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82a3a05f",
+   "execution_count": 27,
+   "id": "5a70a278",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "27/50 [===============>..............] - ETA: 8s - loss: 0.5045 - acc: 0.7541"
+      "50/50 [==============================] - 20s 395ms/step - loss: 0.4826 - acc: 0.7654 - val_loss: 0.3053 - val_acc: 0.8680\n",
+      "Epoch 2/10\n",
+      "50/50 [==============================] - 21s 420ms/step - loss: 0.3990 - acc: 0.8231 - val_loss: 0.3930 - val_acc: 0.8325\n",
+      "Epoch 3/10\n",
+      "50/50 [==============================] - 20s 405ms/step - loss: 0.4007 - acc: 0.8218 - val_loss: 0.4141 - val_acc: 0.8122\n",
+      "Epoch 4/10\n",
+      "50/50 [==============================] - 19s 384ms/step - loss: 0.3954 - acc: 0.8218 - val_loss: 0.3180 - val_acc: 0.8604\n",
+      "Epoch 5/10\n",
+      "50/50 [==============================] - 20s 403ms/step - loss: 0.3745 - acc: 0.8419 - val_loss: 0.2655 - val_acc: 0.8858\n",
+      "Epoch 6/10\n",
+      "50/50 [==============================] - 21s 422ms/step - loss: 0.3907 - acc: 0.8331 - val_loss: 0.5056 - val_acc: 0.7716\n",
+      "Epoch 7/10\n",
+      "50/50 [==============================] - 21s 416ms/step - loss: 0.3685 - acc: 0.8463 - val_loss: 0.5933 - val_acc: 0.7360\n",
+      "Epoch 8/10\n",
+      "50/50 [==============================] - 21s 417ms/step - loss: 0.3483 - acc: 0.8438 - val_loss: 0.5134 - val_acc: 0.7868\n",
+      "Epoch 9/10\n",
+      "50/50 [==============================] - 23s 462ms/step - loss: 0.3686 - acc: 0.8363 - val_loss: 0.5077 - val_acc: 0.7665\n",
+      "Epoch 10/10\n",
+      "50/50 [==============================] - 23s 452ms/step - loss: 0.3560 - acc: 0.8551 - val_loss: 0.5203 - val_acc: 0.7690\n"
      ]
     }
    ],
@@ -937,8 +955,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59d53bec",
+   "execution_count": 28,
+   "id": "5f306b2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,10 +986,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83289cd5",
+   "execution_count": 29,
+   "id": "99f5693a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.43360413014888766"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loss_mean_aug = np.mean(val_loss_aug)\n",
     "loss_mean_aug"
@@ -994,10 +1023,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "310c7cd4",
+   "execution_count": 30,
+   "id": "28b43613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7659898400306702"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "acc_mean_aug = np.mean(val_acc_aug[5:10])\n",
     "acc_mean_aug"
